--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,18 @@ en:
     colaborator_delete_confirmation: "¿Sure you want to delete this collaborator?"
     unlinking_error: "Error while unlinking user!"
     shared_project_delete_confirmation: "This project is shared. ¿Are you sure to delete this project?"
+    1: 'January'
+    2: 'February'
+    3: 'March'
+    4: 'April'
+    5: 'May'
+    6: 'June'
+    7: 'July'
+    8: 'August'
+    9: 'September'
+    10: 'October'
+    11: 'November'
+    12: 'December'
   layouts:
     landing:
       meta_description: "An advocacy tool"
